--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <div class="col-md-12 text-center" >
 							<h3 class="media-heading" >地址: &nbsp; 上海市宝山区大场镇南陈路333号上海大学计算机学院大楼608室</h3>
 							<HR style="FILTER: alpha(opacity=100,finishopacity=0,style=3)" width="64%" color=#987cb9 SIZE=3>
-							<h3 class="media-heading">邮箱:<a href="mailto:hrzhangsh@shu.edu.cn">&nbsp;hrzhangsh@shu.edu.cn</a></h3>
+							<h3 class="media-heading">邮箱:&nbsp;&nbsp;<a href="mailto:hrzhangsh@shu.edu.cn">hrzhangsh@shu.edu.cn</a>&nbsp;&nbsp;<a href="mailto:dbdai@shu.edu.cn">dbdai@shu.edu.cn</a></h3>
 							
 							<HR style="FILTER: alpha(opacity=100,finishopacity=0,style=2)" width="40%" color=#987cb9 SIZE=10>
 								<h3 class="media-heading">电话: &nbsp; 021-66135551</h3>
