--- a/en_index.html
+++ b/en_index.html
@@ -316,12 +316,10 @@
                     <div class="row">
                         <div class="col-md-12 text-center" >
 							<h3 class="media-heading" >Address: &nbsp; Room 608, Building of Computer Engineering and Science, Shanghai University, 333 Nanchen Road, Dachang Town, Baoshan District, Shanghai</h3>
-							<HR style="FILTER: alpha(opacity=100,finishopacity=0,style=3)" width="84%" color=#987cb9 SIZE=3>
-							<h3 class="media-heading">Email:&nbsp;hrzhangsh@shu.edu.cn</h3>
-							
-							<HR style="FILTER: alpha(opacity=100,finishopacity=0,style=2)" width="40%" color=#987cb9 SIZE=10>
-								<h3 class="media-heading">Tel: &nbsp; 021-66135551</h3>
-    
+							<hr style="FILTER: alpha(opacity=100,finishopacity=0,style=3)" width="84%" color=#987cb9 SIZE=3>
+							<h3 class="media-heading">Email:&nbsp;&nbsp;<a href="mailto:hrzhangsh@shu.edu.cn">hrzhangsh@shu.edu.cn</a>&nbsp;&nbsp;<a href="mailto:dbdai@shu.edu.cn">dbdai@shu.edu.cn</a></h3>					
+							<hr style="FILTER: alpha(opacity=100,finishopacity=0,style=2)" width="40%" color=#987cb9 SIZE=10>
+							<h3 class="media-heading">Tel: &nbsp; 021-66135551</h3>   
                         </div>
 						<div class="space"></div>	
                         <div class="space"></div>	
