Add google analytics

--- a/pic.html
+++ b/pic.html
@@ -194,6 +194,15 @@
 			$('#copy-year').html(showYears());
 		});
 	</script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-J8D4HDXN9F"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-J8D4HDXN9F');
+	</script>
 	<!-- 
     	Free Responsive Template by templatemo
     	http://www.smallseashell.com
