--- a/index.html
+++ b/index.html
@@ -370,6 +370,15 @@
         <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
 		<script src="/js/template.js"></script>
 		<script src="/js/blcc.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-J8D4HDXN9F"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-J8D4HDXN9F');
+		</script>
 
 	</body>
 </html>
