Update Google Analytics

--- a/pic.html
+++ b/pic.html
@@ -195,13 +195,13 @@
 		});
 	</script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-J8D4HDXN9F"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-213351241-1F"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 
-		gtag('config', 'G-J8D4HDXN9F');
+		gtag('config', 'UA-213351241-1');
 	</script>
 	<!-- 
     	Free Responsive Template by templatemo
